fixed invalid date in profile page, fixed title spacing on posts, fixed left hand padding of posts in profile page

--- a/src/styles/DisplayPosts.css
+++ b/src/styles/DisplayPosts.css
@@ -88,10 +88,6 @@
   display: block; /* Ensures the span takes the full width */
 }
 
-.title-space {
-  padding-left: 50px;
-}
-
 .nameSection {
   padding-left: 10px;
 }
